--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.27.0",
     "@clerk/nextjs": "^4.29.10",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18"
   },
